@@ -13,6 +13,7 @@ public class Line {
     private final Sections sections;
 
     public Line(Long id, String name, String color, int extraFare, List<Section> sections) {
+        validateLine(name, color);
         this.id = id;
         this.name = name;
         this.color = color;
@@ -20,16 +21,29 @@ public class Line {
         this.sections = new Sections(sections);
     }
 
-    public Line(String name, String color) {
-        this(null, name, color, DEFAULT_EXTRA_FARE, Collections.emptyList());
+    public Line(Long id, String name, String color, int extraFare, Section section) {
+        this(id, name, color, extraFare, List.of(section));
     }
 
     public Line(Long id, String name, String color, int extraFare) {
         this(id, name, color, extraFare, Collections.emptyList());
     }
 
-    public Line(Long id, String name, String color, int extraFare, Section section) {
-        this(id, name, color, extraFare, List.of(section));
+    public Line(String name, String color, int extraFare) {
+        this(null, name, color, extraFare, Collections.emptyList());
+    }
+
+    public Line(String name, String color) {
+        this(null, name, color, DEFAULT_EXTRA_FARE, Collections.emptyList());
+    }
+
+    private void validateLine(String name, String color) {
+        if (name.isBlank()) {
+            throw new IllegalArgumentException("이름은 빈 값일 수 없습니다.");
+        }
+        if (color.isBlank()) {
+            throw new IllegalArgumentException("색상은 빈 값일 수 없습니다.");
+        }
     }
 
     public void addSection(Section section) {
